# spiprog

./: .gitignore  CMakeLists.txt  LICENSE  LicenseAgreement.txt  README.md  export_repo.py  spiprog.cpp
flash/: spi_nor_flash.cpp  spi_nor_flash.h  spi_nor_flash.su
platform/: platform_spi.h  platform_spi_stub.cpp
tests/: CMakeLists.txt  README.md  platform_spi_sim.cpp  platform_spi_sim.h  test_spi_nor_flash.cpp
tests/platform/: empty_platform.c  ft4222h_platform.cpp  ioctl_platform.c  spi_dev_platform.c
tests/platform/ftdi_installation/: libft4222-linux-1.4.4.44.tgz
tests/platform/libft4222/: FT4222H_Lib_1.4.3_Release_info.rtf
tests/platform/libft4222/samples/: LibFT4222_examples.sln
tests/platform/libft4222/samples/csharp_spi_master/: Program.cs
tests/platform/libft4222/samples/flash_example/spi_flash_quad_test_mxic/: spi_flash_quad_test_mxic.vcxproj
tests/platform/libft4222/samples/flash_example/spi_flash_quad_test_toshiba/: spi_flash_quad_test_toshiba.vcxproj
tests/platform/libft4222/samples/flash_example/spi_flash_single_test_mxic/: spi_flash_single_test_mxic.vcxproj
tests/platform/libft4222/samples/getting_started/: getting_started.vcxproj
tests/platform/libft4222/samples/gpio_read/: gpio_read.vcxproj
tests/platform/libft4222/samples/gpio_write/: gpio_write.vcxproj
tests/platform/libft4222/samples/i2c_master/: i2c_master.vcxproj
tests/platform/libft4222/samples/i2c_slave/: i2c_slave.vcxproj
tests/platform/libft4222/samples/interrupt/: interrupt.vcxproj
tests/platform/libft4222/samples/spi_master/: spi_master.cpp  spi_master.vcxproj
tests/platform/libft4222/samples/spi_slave_test_master_side/: spi_slave_test_master_side.vcxproj
tests/platform/libft4222/samples/spi_slave_test_no_protocol/: spi_slave_test_no_protocol.vcxproj
tests/platform/libft4222/samples/spi_slave_test_no_protocol_master_side/: spi_slave_test_no_protocol_master_side.vcxproj
tests/platform/libft4222/samples/spi_slave_test_no_protocol_slave_side/: spi_slave_test_no_protocol_slave_side.vcxproj
tests/platform/libft4222/samples/spi_slave_test_slave_side/: spi_slave_test_slave_side.vcxproj
